<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="memory_boost">Boost memory</string>
    <string name="memory_boost_summary">Optimize memory</string>
    <string name="boost_memory">Memory boosted</string>
    <string name="quick_start_apps_title">Quick Start Apps</string>
    <string name="quick_start_apps_summary">Select apps to launch quickly</string>
    <string name="settings_title">Game Space</string>
    <string name="settings_summary">Manage your gaming setup</string>
    <string name="app_selector_label">Pick your game</string>
    <string name="auto_brightness_disabled_title">Disable auto-brightness</string>
    <string name="auto_brightness_disabled_summary">Keep brightness settled while in-game</string>
    <string name="heads_up_disabled_summary">Disable Notification heads-up while in-game</string>
    <string name="in_game_preferences_title">In-game options</string>
    <string name="game_list_title">Library</string>
    <string name="game_remove_message">Are you sure you want to remove %1$s from your library ?</string>
    <string name="app_search_title">Search</string>
    <string name="three_screenshot_disabled_summary">Temporary disable three-fingers-swipe gesture while in-game</string>
    <string name="three_screenshot_disabled_title">Disable three fingers swipe gesture</string>
    <string name="chaldea">chaldeaprjkt</string>
    <string name="state_enabled">Enabled</string>
    <string name="state_disabled">Disabled</string>
    <string name="state_default">Default</string>
    <string name="game_mode_title">Mode</string>
    <string-array name="game_mode_names">
        <item>Unsupported</item>
        <item>Standard</item>
        <item>Performance</item>
        <item>Battery</item>
    </string-array>
    <string name="fps_Info_title">FPS Info</string>
    <string name="stay_awake_title">Stay Awake</string>
    <string name="stay_awake_summary">Keep screen awake while in the game</string>
    <string name="lock_gesture_title">Lock gesture</string>
    <string name="ringer_mode_title">In-game ringer mode</string>
    <string-array name="ringer_mode_entries">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Normal</item>
        <item>Do not change</item>
    </string-array>
    <string name="suppress_fullscreen_intent_title">Block fullscreen event</string>
    <string name="suppress_fullscreen_intent_summary">Prevent fullscreen events like incoming calls from appearing while in-game</string>
    <string name="per_app_title">Configure Game</string>
    <string name="per_app_mode_title">Preferred Mode</string>
    <string-array name="per_app_preferred_mode_entries">
        <item>Standard</item>
        <item>Performance</item>
        <item>Battery</item>
    </string-array>
    <string name="per_app_angle_title">Graphics driver</string>
    <string name="per_app_unregister">Remove %1$s from library</string>
    <string name="adb_disabled_summary">Temporary disable USB ADB debugging while in-game</string>
    <string name="adb_disabled_title">Disable USB debugging</string>
    <string name="date_format" translatable="false">EEEE, MMM d</string>
    <string name="battery_format" translatable="false"><xliff:g id="percentage" example="100">%1$d%%</xliff:g></string>
    <string name="ram_usage">RAM usage: </string>
    <string name="notification_mode_title">Notification mode</string>
    <string name="notification_mode_hide">Do not show</string>
    <string name="notification_mode_headsup">Show as heads up</string>
    <string name="notification_mode_reticker">Show as reTicker</string>
    <string name="notification_mode_danmaku">Show as Danmaku</string>
    <string name="notification_hide">Hide</string>
    <string name="notification_headsup">Heads Up</string>
    <string name="notification_reticker">reTicker</string>
    <string name="notification_danmaku">Danmaku</string>
    <string name="in_game_calls_title">In-game call</string>
    <string name="in_game_calls_no_action">No action</string>
    <string name="in_game_calls_auto_answer">Auto answer</string>
    <string name="in_game_calls_auto_reject">Auto reject</string>
    <string name="in_game_calls_received_number">Received call from %1$s</string>
    <string name="in_game_calls_rejected_number">Rejected call from %1$s</string>
    <string name="danmaku_notification_mode_title">Danmaku Notification mode</string>
    <string name="danmaku_notification_mode_summary">Show notification as danmaku aka bullet comments while game is active</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="gamespace_menu_opacity_title">Overlay menu opacity level</string>
    <string name="bypass_charge_enabled_title">Bypass charging</string>
    <string name="bypass_charge_enabled_summary">Enable bypass charging while playing games</string>
     <string name="gamespace_running">Game Space is running</string>
     <string name="app_locked_message">This app is locked. Please unlock it first.</string>
     <string name="call_overlay_enabled_title">Call overlay</string>
     <string name="call_overlay_enabled_summary">Show minimal call overlay to answer/reject calls</string>
     <string name="select_apps_to_launch">Select apps to launch quickly</string>
     <string name="add_game">Add game</string>
     <string name="expanded">Expanded</string>
     <string name="collapsed">Collapsed</string>
     <string name="toggle_menu">Toggle menu</string>
     <string name="close_menu">Close menu</string>
     <string name="notifications">Notifications</string>
     <string name="display_gestures">Display &amp; Gestures</string>
     <string name="no_games_added">No games added yet</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="remove">Remove</string>
     <string name="back">Back</string>
     <string name="game_mode">Game Mode</string>
     <string name="graphics">Graphics</string>
     <string name="remove_from_library">Remove from library</string>
     <string name="registered_game">Registered Game</string>
     <string name="game_space">Game Space</string>
     <string name="ringer_mode_silent">Silent</string>
     <string name="ringer_mode_vibrate">Vibrate</string>
     <string name="ringer_mode_normal">Normal</string>
     <string name="ringer_mode_no_change">Do not change</string>
     <string name="game_mode_standard">Standard</string>
     <string name="game_mode_performance">Performance</string>
     <string name="game_mode_battery">Battery</string>
     <string name="save">Save</string>
     <string name="panel_options">Panel Options</string>
     <string name="brightness_slider">Brightness Slider</string>
     <string name="fps_graph">FPS Graph</string>
     <string name="selected_tiles">Selected Tiles</string>
     <string name="available_tiles">Available Tiles</string>
     <string name="drag_tiles_here">Drag tiles here</string>
     <string name="all_tiles_added">All tiles added</string>
     <string name="fps_stats">min %1$d | avg %2$d | max %3$d</string>
     <string name="add">Add</string>
     <string name="view_details">View Details</string>
     <string name="launch_game">Launch Game</string>
     <string name="remove_game">Remove Game</string>
     <string name="empty_library">No games in your library</string>
     <string name="add_first_game">Add Your First Game</string>
     <string name="per_app_settings">Game Settings</string>
     <string name="search_apps">Search apps\u2026</string>
     <string name="about_github">GitHub</string>
     <string name="about_translate">Translate</string>
     <string name="about_donate">Donate</string>
     <string name="tile_danmaku">Danmaku</string>
     <string name="tile_stay_awake">Stay Awake</string>
     <string name="tile_wifi">Wi-Fi</string>
     <string name="tile_dnd">DND</string>
     <string name="tile_fps_info">FPS Info</string>
     <string name="tile_auto_rotate">Auto Rotate</string>
     <string name="tile_boost_memory">Boost Memory</string>
     <string name="tile_settings">Settings</string>
     <string name="tile_airplane_mode">Airplane Mode</string>
     <string name="tile_bluetooth">Bluetooth</string>
     <string name="tile_mobile_data">Mobile Data</string>
     <string name="tile_touch_boost">Touch Boost</string>
     <string name="tile_flashlight">Flashlight</string>
     <string name="tile_dark_mode">Dark Mode</string>
     <string name="tile_location">Location</string>
     <string name="tile_battery_saver">Battery Saver</string>
     <string name="tile_hotspot">Hotspot</string>
     <string name="tile_nfc">NFC</string>
     <string name="tile_night_light">Night Light</string>
     <string name="tile_aod">Always On Display</string>
     <string name="tile_data_saver">Data Saver</string>
     <string name="tile_color_inversion">Color Inversion</string>
     <string name="tile_color_correction">Color Correction</string>
     <string name="tile_reduce_brightness">Reduce Brightness</string>
     <string name="tile_one_handed">One Handed</string>
     <string name="tile_heads_up">Heads Up</string>
     <string name="tile_auto_sync">Auto Sync</string>
     <string name="tile_camera_privacy">Camera</string>
     <string name="tile_mic_privacy">Microphone</string>
     <string name="tile_work_profile">Work Profile</string>
     <string name="tile_usb_tether">USB Tethering</string>
     <string name="tile_dream">Screen Saver</string>
     <string name="tile_reading_mode">Reading Mode</string>
     <string name="tile_power_share">Power Share</string>
     <string name="tile_caffeine">Caffeine</string>
     <string name="tile_vpn">VPN</string>
     <string name="tile_cast">Cast</string>
     <string name="tile_profiles">Profiles</string>
     <string name="tile_smart_pixels">Smart Pixels</string>
     <string name="tile_screen_record">Screen Record</string>
     <string name="tile_screenshot">Screenshot</string>
     <string name="icon_idle_alpha_title">Icon idle transparency</string>
     <string name="auto_dnd_title">Auto Do Not Disturb</string>
     <string name="auto_dnd_summary">Automatically enable DND while in-game and restore when done</string>
     <string name="mapper_press_button">Press a button on your controller or keyboard\u2026</string>
     <string name="mapper_add_point">Add tap point</string>
     <string name="mapper_delete_point">Delete tap point</string>
     <string name="mapper_map_controls">Map controls</string>
     <string name="cd_reject">Reject</string>
     <string name="cd_accept">Accept</string>
     <string name="cd_caller_photo">Caller photo</string>
     <string name="cd_dismiss">Dismiss</string>
     <string name="cd_edit_tiles">Edit Tiles</string>
     <string name="cd_collapse">Collapse</string>
     <string name="cd_expand">Expand</string>
     <string name="game_optimization_title">Launch Optimization</string>
     <string name="game_memory_management_title">Smart Memory Management</string>
     <string name="game_memory_management_summary">Automatically clear background apps when launching games</string>
     <string name="game_load_priority_title">Loading Priority</string>
     <string name="game_load_priority_summary">Set resource priority during game launch</string>
     <string name="game_cache_management_title">Cache Management</string>
     <string name="game_cache_management_summary">Optimize game cache for faster loading times</string>
     <string-array name="game_load_priority_entries">
         <item>Balanced (Recommended)</item>
         <item>Maximum Performance</item>
         <item>Power Saving</item>
     </string-array>
</resources>