<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 Chaldeaprjkt
                   2022-2026 crDroid Android Project
                   2023 risingOS Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.IllustrationPreference
        android:key="game_settings_illustration_video"
        app:lottie_rawRes="@raw/game_settings_illustration" />

    <PreferenceCategory
        android:key="game_optimization"
        android:title="@string/game_optimization_title">

        <SwitchPreferenceCompat
            android:key="game_memory_management"
            android:title="@string/game_memory_management_title"
            android:summary="@string/game_memory_management_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_load_priority"
            android:title="@string/game_load_priority_title"
            android:summary="%s"
            android:entries="@array/game_load_priority_entries"
            android:entryValues="@array/game_load_priority_values"
            android:defaultValue="balanced" />

        <SwitchPreferenceCompat
            android:key="game_cache_management"
            android:title="@string/game_cache_management_title"
            android:summary="@string/game_cache_management_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="in_game_preferences"
        android:title="@string/in_game_preferences_title">

        <SwitchPreferenceCompat
            android:key="gamespace_auto_brightness_disabled"
            android:title="@string/auto_brightness_disabled_title"
            android:summary="@string/auto_brightness_disabled_summary"
            android:defaultValue="true" />

        <com.crdroid.settings.preferences.SystemSettingSwitchPreference
            android:key="gamespace_stay_awake"
            android:title="@string/stay_awake_title"
            android:summary="@string/stay_awake_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="gamespace_danmaku_notification_mode"
            android:title="@string/danmaku_notification_mode_title"
            android:summary="@string/danmaku_notification_mode_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="gamespace_auto_dnd"
            android:title="@string/auto_dnd_title"
            android:summary="@string/auto_dnd_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="call_overlay_enabled"
            android:title="@string/call_overlay_enabled_title"
            android:summary="@string/call_overlay_enabled_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="gamespace_calls_mode"
            android:title="@string/in_game_calls_title"
            android:summary="%s"
            android:entries="@array/in_game_calls_entries"
            android:entryValues="@array/in_game_calls_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="gamespace_ringer_mode"
            android:title="@string/ringer_mode_title"
            android:summary="%s"
            android:entries="@array/ringer_mode_entries"
            android:entryValues="@array/ringer_mode_values"
            android:defaultValue="3" />

        <SwitchPreferenceCompat
            android:key="gamespace_tfgesture_disabled"
            android:title="@string/three_screenshot_disabled_title"
            android:summary="@string/three_screenshot_disabled_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="gamespace_lock_gesture"
            android:title="@string/lock_gesture_title"
            android:summary="@string/lock_gesture_summary"
            android:defaultValue="false" />

        <com.crdroid.settings.preferences.SystemSettingSwitchPreference
            android:key="bypass_charge_enabled"
            android:title="@string/bypass_charge_enabled_title"
            android:summary="@string/bypass_charge_enabled_summary"
            android:defaultValue="false" />

        <com.crdroid.settings.preferences.CustomSeekBarPreference
            android:key="gamespace_icon_idle_alpha"
            android:title="@string/icon_idle_opacity_title"
            android:defaultValue="25"
            android:max="100"
            app:min="5"
            app:units="%" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_start_apps_category">

        <io.chaldeaprjkt.gamespace.preferences.QuickStartAppPreference
            android:key="quick_start_apps"
            android:title="@string/quick_start_apps_title"
            android:summary="@string/quick_start_apps_summary" />

    </PreferenceCategory>

    <io.chaldeaprjkt.gamespace.preferences.AppListPreferences
        android:key="gamespace_game_list"
        android:title="@string/game_list_title" />

</PreferenceScreen>
